Amended comments and documentation to improve references for obtaining additional information and resources. Added an exception if the resourceKey parameter is not updated from the example. Added a customer notices section to the readme. Used User Agent Client Hint (UA-CH) consistently in the documentation.

--- a/integrationExamples/gpt/51DegreesRtdProvider_example.html
+++ b/integrationExamples/gpt/51DegreesRtdProvider_example.html
@@ -95,8 +95,9 @@
                             name: '51Degrees',
                             waitForIt: true,
                             params: {
-                                // Get your resource key from https://configure.51degrees.com/AQRVdgJ-9x1dNvxk3Eg
+                                // Get your resource key from https://configure.51degrees.com/tWrhNfY6
                                 resourceKey: '<YOUR_RESOURCE_KEY>',
+                                // alternatively, you can use the on-premise version of the 51Degrees service and connect to your chosen end point
                                 // onPremiseJSUrl: 'https://localhost/51Degrees.core.js'
                             }
                         }
