--- a/integrationExamples/gpt/51DegreesRtdProvider_example.html
+++ b/integrationExamples/gpt/51DegreesRtdProvider_example.html
@@ -84,7 +84,7 @@
             ];
 
             pbjs.setConfig({
-                debug: true,
+                debug: true, // use only for testing, remove in production
                 realTimeData: {
                     auctionDelay: 1000, // should be set lower in production use
                     dataProviders: [
@@ -177,6 +177,17 @@
         </script>
     </div>
 
+    <div id="debug">
+        <h3>Testing/Debugging Guidance</h3>
+        <ol>
+            <li>Make sure you have <code>debug: true</code> under <code>pbjs.setConfig</code> in this example code (be sure to remove it for production!)
+            <li>Make sure you have replaced <code>&lt;YOUR RESOURCE KEY&gt;</code> in this example code with the one you have obtained 
+            from the <a href="https://configure.51degrees.com" target="blank;">51Degrees Configurator Tool</a></li>
+            <li>Open DevTools Console in your browser and refresh the page</li>
+            <li>Observe the enriched ortb device data shown below and also in the console as part of the <code>[51Degrees RTD Submodule]: reqBidsConfigObj:</code> message (under <code>reqBidsConfigObj.global.device</code>)</li>
+        </ol>
+        
+    </div>
     <div id="enriched-51" style="display: none">
         <h3>Enriched ORTB2 device data</h3>
         <pre id="enriched-51-data"></pre>
