--- a/integrationExamples/gpt/prebidServer_fledge_example.html
+++ b/integrationExamples/gpt/prebidServer_fledge_example.html
@@ -3,7 +3,7 @@
   <!--
     FLEDGE (Protected Audience API) configuration with GPT and Prebid-Server
 
-    gulp serve --modules=fledgeForGpt,prebidServerBidAdapter
+    gulp serve --modules=paapiForGpt,prebidServerBidAdapter
   -->
   <script async src="../../build/dev/prebid.js"></script>
   <script async src="https://www.googletagservices.com/tag/js/gpt.js"></script>
@@ -44,7 +44,7 @@
 
     pbjs.que.push(function() {
       pbjs.setConfig({
-        fledgeForGpt: {
+        paapi: {
           enabled: true
         },
         s2sConfig: [{
