Prebid 9: rename fledge to paapi (#11695)
* rename bidderRequest.fledgeEnabled to bidderRequest.paapi.enabled

* rename fledgeAuctionConfigs to paapi

* remove support for bidder fledgeAuctionConfigs

* remove support for fledgeForGpt config

* rename fledgeForGpt -> paapiForGpt

* update refs to fledgeForGpt in comments and docs

* Remove special bidder configuration for fledge

* flip paapiForGpt autoconfig default

* rename integration examples

* update paapiForGpt.md

--- a/integrationExamples/gpt/prebidServer_paapi_example.html
+++ b/integrationExamples/gpt/prebidServer_paapi_example.html
@@ -3,7 +3,7 @@
   <!--
     FLEDGE (Protected Audience API) configuration with GPT and Prebid-Server
 
-    gulp serve --modules=fledgeForGpt,prebidServerBidAdapter
+    gulp serve --modules=paapiForGpt,prebidServerBidAdapter
   -->
   <script async src="../../build/dev/prebid.js"></script>
   <script async src="https://www.googletagservices.com/tag/js/gpt.js"></script>
@@ -44,8 +44,8 @@
 
     pbjs.que.push(function() {
       pbjs.setConfig({
-        fledgeForGpt: {
-          enabled: true
+        paapi: {
+          enabled: true,
         },
         s2sConfig: [{
           accountId : '1',
@@ -55,13 +55,6 @@
           timeout : 1500,
           adapter : 'prebidServer'
         }]
-      });
-
-      pbjs.setBidderConfig({
-        bidders: ['openx'],
-        config: {
-          fledgeEnabled: true
-        }
       });
 
       pbjs.addAdUnits(adUnits);
