--- a/integrationExamples/gpt/paapi_example.html
+++ b/integrationExamples/gpt/paapi_example.html
@@ -3,7 +3,7 @@
   <!--
     FLEDGE (Protected Audience API) configuration with GPT and FLEDGE-supporting adapter
 
-    gulp serve --modules=fledgeForGpt,openxBidAdapter
+    gulp serve --modules=paapiForGpt,openxBidAdapter
   -->
   <script async src="../../build/dev/prebid.js"></script>
   <script async src="https://www.googletagservices.com/tag/js/gpt.js"></script>
