modified bidfloor mapping logic

--- a/integrationExamples/gpt/precisoExample.html
+++ b/integrationExamples/gpt/precisoExample.html
@@ -34,6 +34,7 @@
             publisherId: 'PRECISO_TEST00001',
             traffic: 'banner',
             bidFloor: 0.12,
+            currency: 'USD'
           }
         }]
       },
@@ -50,7 +51,8 @@
             publisherId: 'PRECISO_TEST00001',
             host: 'prebid',
             traffic: 'banner',
-            bidFloor: 0.28
+            bidFloor: 0.28,
+            currency: 'INR'
           }
         }]
       }
