renderer.js changes reverted

--- a/integrationExamples/gpt/precisoExample.html
+++ b/integrationExamples/gpt/precisoExample.html
@@ -8,7 +8,7 @@
   <script>
     var div_1_sizes = [
       [300, 250],
-      [300, 600]
+      [300, 250]
     ];
     var div_2_sizes = [
       [300, 250],
@@ -34,7 +34,8 @@
             publisherId: 'PRECISO_TEST00001',
             traffic: 'banner',
             bidFloor: 0.12,
-            currency: 'USD'
+            currency: ['USD'],
+            region: 'NPL'
           }
         }]
       },
@@ -52,7 +53,8 @@
             host: 'prebid',
             traffic: 'banner',
             bidFloor: 0.28,
-            currency: 'INR'
+            currency: ['INR'],
+            region: 'NPL'
           }
         }]
       }
