Fixed Tests Fixed Linter Errors Updated Example

--- a/integrationExamples/gpt/symitridap_segments_example.html
+++ b/integrationExamples/gpt/symitridap_segments_example.html
@@ -78,7 +78,8 @@
                       apiVersion: "x1",
                       domain: "prebid.org",
                       identityValue: "test@invalid.com",
-                      identityType: "hid"
+                      identityType: "simpleid",
+                      pixelUrl: 'https://www.test.com/pixel'
                     }
                   }
                 ]
