--- a/integrationExamples/gpt/hello_world.html
+++ b/integrationExamples/gpt/hello_world.html
@@ -28,8 +28,7 @@
             bids: [{
                 bidder: 'brianx',
                 params: {
-                    pubId: 'F7B53DBC-85C1-4685-9A06-9CF4B6261FA3',
-                    endpoint: 'http://adx-engine-gray.tec-do.cn/bid'
+                    pubId: 'F7B53DBC-85C1-4685-9A06-9CF4B6261FA3'
                 }
             }]
 
