Code optimization: * created utils for all common code * reused prebid inbuild functions * created nexverse.html to text nexverse adaptor * changed test specs based on main js

--- a/integrationExamples/gpt/nexverse.html
+++ b/integrationExamples/gpt/nexverse.html
@@ -29,9 +29,10 @@
                 bidder: 'nexverse',
                 params: {
                     uid: '5595de48c4113f3285d32ea07bd27878',
-                    pub_id: '24154',
-                    pub_epid: '34286'
-                }
+                    pubId: '24154',
+                    pubEpid: '34286'
+                },
+                isDebug: true
             }]
 
         }];
