--- a/integrationExamples/gpt/nexverse.html
+++ b/integrationExamples/gpt/nexverse.html
@@ -10,6 +10,7 @@
 <html>
 
 <head>
+    <title>NexVerse Prebid.Js Demo</title>
     <script async src="../../build/dev/prebid.js"></script>
     <script async src="https://www.googletagservices.com/tag/js/gpt.js"></script>
     <script>
@@ -17,7 +18,26 @@
         var PREBID_TIMEOUT = 1000;
 
         var adUnits = [{
-            code: 'div-gpt-ad-1460505748561-0',
+            code: 'div-banner-native-1',
+            mediaTypes: {
+                banner: {
+                    sizes: [[970, 90]],
+                }
+            },
+
+            // Replace this object to test a new Adapter!
+            bids: [{
+                bidder: 'nexverse',
+                params: {
+                    uid: '77d4a2eb3d209ce6c7691dc79fcab358',
+                    pubId: '24051',
+                    pubEpid: '34561'
+                },
+                isDebug: true
+            }]
+
+        },{
+            code: 'div-banner-native-2',
             mediaTypes: {
                 banner: {
                     sizes: [[300, 250]],
@@ -28,9 +48,9 @@
             bids: [{
                 bidder: 'nexverse',
                 params: {
-                    uid: '5595de48c4113f3285d32ea07bd27878',
-                    pubId: '24154',
-                    pubEpid: '34286'
+                    uid: '77d4a2eb3d209ce6c7691dc79fcab358',
+                    pubId: '24051',
+                    pubEpid: '34561'
                 },
                 isDebug: true
             }]
@@ -77,7 +97,8 @@
 
     <script>
         googletag.cmd.push(function () {
-            googletag.defineSlot('/19968336/header-bid-tag-0', [[300, 250], [300, 600]], 'div-gpt-ad-1460505748561-0').addService(googletag.pubads());
+            googletag.defineSlot('/19968336/header-bid-tag-0', [[970, 90]], 'div-banner-native-1').addService(googletag.pubads());
+            googletag.defineSlot('/19968336/header-bid-tag-1', [[300, 250]], 'div-banner-native-2').addService(googletag.pubads());
 
             googletag.pubads().enableSingleRequest();
             googletag.enableServices();
@@ -86,11 +107,18 @@
 </head>
 
 <body>
-    <h2>Prebid.js Test</h2>
+    <h2>Nexverse Prebid.js Test</h2>
     <h5>Div-1</h5>
-    <div id='div-gpt-ad-1460505748561-0'>
+    <div id='div-banner-native-1'>
         <script type='text/javascript'>
-            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1460505748561-0'); });
+            googletag.cmd.push(function () { googletag.display('div-banner-native-1'); });
+        </script>
+    </div>
+
+    <h5>Div-2</h5>
+    <div id='div-banner-native-2'>
+        <script type='text/javascript'>
+            googletag.cmd.push(function () { googletag.display('div-banner-native-2'); });
         </script>
     </div>
 </body>
