Added comment for is debug param

--- a/integrationExamples/gpt/nexverse.html
+++ b/integrationExamples/gpt/nexverse.html
@@ -33,7 +33,7 @@
                     pubId: '24051',
                     pubEpid: '34561'
                 },
-                isDebug: true
+                isDebug: false // Optional, i.e True for debug mode
             }]
 
         },{
@@ -52,7 +52,7 @@
                     pubId: '24051',
                     pubEpid: '34561'
                 },
-                isDebug: true
+                isDebug: false // Optional, i.e True for debug mode
             }]
 
         }];
