--- a/integrationExamples/videoModule/jwplayer/eventListeners.html
+++ b/integrationExamples/videoModule/jwplayer/eventListeners.html
@@ -15,7 +15,9 @@
       var adUnits = [{
         code: 'div-gpt-ad-51545-0',
         mediaTypes: {
-          video: {}
+          video: {
+            playerSize: [640, 360]
+          }
         },
         video: {
           divId: 'player',
