--- a/integrationExamples/videoModule/jwplayer/eventsUI.html
+++ b/integrationExamples/videoModule/jwplayer/eventsUI.html
@@ -15,7 +15,9 @@
       var adUnits = [{
         code: 'testUnit',
         mediaTypes: {
-          video: {}
+          video: {
+            playerSize: [640, 360]
+          }
         },
         video: {
           divId: 'player', // required to indicate which player is being used to render this ad unit.
