--- a/integrationExamples/videoModule/adPlayerPro/localVideoCache.html
+++ b/integrationExamples/videoModule/adPlayerPro/localVideoCache.html
@@ -3,12 +3,9 @@
 
 <head>
   <script src="https://serving.stat-rock.com/player/prebidAdPlayerPro.js"></script>
-  <!-- <script async src="https://cdn.jsdelivr.net/npm/prebid.js@latest/dist/not-for-prod/prebid.js"></script> -->
   <script async src="../../../build/dev/prebid.js"></script>
 
-  <title>AdPlayer.Pro Event Listeners</title>
-
-  <!--  This demo listens to every video event and logs the event payload. -->
+  <title>AdPlayer.Pro with Local Cache</title>
 
   <script>
     // Setup ad units
