--- a/integrationExamples/videoModule/jwplayer/localVideoCache.html
+++ b/integrationExamples/videoModule/jwplayer/localVideoCache.html
@@ -4,9 +4,7 @@
   <script src="https://cdn.jwplayer.com/libraries/l5MchIxB.js"></script>
   <script async src="../../../build/dev/prebid.js"></script>
 
-  <title>JW Player with Playlist</title>
-
-  <!-- This Demo sets up the JW Player instance with a playlist and requests a bid whenever a new media item is loaded -->
+  <title>JW Player with Local Cache</title>
 
   <script>
     // Setup ad units
