--- a/integrationExamples/gpt/hello_world.html
+++ b/integrationExamples/gpt/hello_world.html
@@ -26,9 +26,9 @@
 
             // Replace this object to test a new Adapter!
             bids: [{
-                bidder: 'appnexus',
+                bidder: 'blue',
                 params: {
-                    placementId: 13144370
+                    publisherId: 13144370
                 }
             }]
 
