remove hello_html & x-domain history changes

--- a/integrationExamples/gpt/hello_world.html
+++ b/integrationExamples/gpt/hello_world.html
@@ -26,9 +26,9 @@
 
             // Replace this object to test a new Adapter!
             bids: [{
-                bidder: 'brianx',
+                bidder: 'appnexus',
                 params: {
-                    pubId: 'F7B53DBC-85C1-4685-9A06-9CF4B6261FA3'
+                    placementId: 13144370
                 }
             }]
 
