--- a/integrationExamples/gpt/hello_world.html
+++ b/integrationExamples/gpt/hello_world.html
@@ -8,7 +8,6 @@
 -->
 
 <html>
-
 <head>
     <script async src="../../build/dev/prebid.js"></script>
     <script async src="https://www.googletagservices.com/tag/js/gpt.js"></script>
@@ -20,21 +19,18 @@
             code: 'div-gpt-ad-1460505748561-0',
             mediaTypes: {
                 banner: {
-                    sizes: [[300, 250]],
+                    sizes: [[300, 250], [300,600]],
                 }
             },
             // Replace this object to test a new Adapter!
             bids: [{
-                bidder: 'blue',
+                bidder: 'appnexus',
                 params: {
-                    bidFloor: 0.05,
-                    currency: 'USD',
-                    placementId: 13144370,
-                    publisherId: 13144370
+                    placementId: 13144370
                 }
             }]
-        },
-        ];
+
+        }];
 
         var pbjs = pbjs || {};
         pbjs.que = pbjs.que || [];
@@ -44,13 +40,12 @@
     <script>
         var googletag = googletag || {};
         googletag.cmd = googletag.cmd || [];
-        googletag.cmd.push(function () {
+        googletag.cmd.push(function() {
             googletag.pubads().disableInitialLoad();
         });
 
-        pbjs.que.push(function () {
+        pbjs.que.push(function() {
             pbjs.addAdUnits(adUnits);
-
             pbjs.requestBids({
                 bidsBackHandler: sendAdserverRequest,
                 timeout: PREBID_TIMEOUT
@@ -60,15 +55,15 @@
         function sendAdserverRequest() {
             if (pbjs.adserverRequestSent) return;
             pbjs.adserverRequestSent = true;
-            googletag.cmd.push(function () {
-                pbjs.que.push(function () {
+            googletag.cmd.push(function() {
+                pbjs.que.push(function() {
                     pbjs.setTargetingForGPTAsync();
                     googletag.pubads().refresh();
                 });
             });
         }
 
-        setTimeout(function () {
+        setTimeout(function() {
             sendAdserverRequest();
         }, FAILSAFE_TIMEOUT);
 
@@ -85,13 +80,12 @@
 </head>
 
 <body>
-    <h2>Prebid.js Test</h2>
-    <h5>Div-1</h5>
-    <div id='div-gpt-ad-1460505748561-0'>
-        <script type='text/javascript'>
-            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1460505748561-0'); });
-        </script>
-    </div>
+<h2>Prebid.js Test</h2>
+<h5>Div-1</h5>
+<div id='div-gpt-ad-1460505748561-0'>
+    <script type='text/javascript'>
+        googletag.cmd.push(function() { googletag.display('div-gpt-ad-1460505748561-0'); });
+    </script>
+</div>
 </body>
-
 </html>
