--- a/integrationExamples/videoModule/adPlayerPro/bidRequestScheduling.html
+++ b/integrationExamples/videoModule/adPlayerPro/bidRequestScheduling.html
@@ -13,10 +13,7 @@
         var adUnits = [{
             code: 'div-gpt-ad-51545-0',
             mediaTypes: {
-                video:{
-                    "context":"outstream",
-                    playerSize: [640, 360]
-                }
+                video:{"context":"outstream"}
             },
             video: {
                 divId: 'player', // required to indicate which player is being used to render this ad unit.
