--- a/integrationExamples/videoModule/jwplayer/bidMarkedAsUsed.html
+++ b/integrationExamples/videoModule/jwplayer/bidMarkedAsUsed.html
@@ -13,9 +13,7 @@
       var adUnits = [{
         code: 'div-gpt-ad-51545-0',
         mediaTypes: {
-          video: {
-            playerSize: [640, 360]
-          }
+          video: {}
         },
         video: {
           divId: 'player', // required to indicate which player is being used to render this ad unit.
