--- a/integrationExamples/videoModule/jwplayer/bidsBackHandlerOverride.html
+++ b/integrationExamples/videoModule/jwplayer/bidsBackHandlerOverride.html
@@ -12,9 +12,7 @@
       var videoAdUnit = {
         code: videoAdUnitCode,
         mediaTypes: {
-          video: {
-            playerSize: [640, 360]
-          }
+          video: {}
         },
         video: {
           divId: 'player', // required to indicate which player is being used to render this ad unit.
