--- a/integrationExamples/videoModule/jwplayer/eventListeners.html
+++ b/integrationExamples/videoModule/jwplayer/eventListeners.html
@@ -15,9 +15,7 @@
       var adUnits = [{
         code: 'div-gpt-ad-51545-0',
         mediaTypes: {
-          video: {
-            playerSize: [640, 360]
-          }
+          video: {}
         },
         video: {
           divId: 'player',
