--- a/integrationExamples/videoModule/jwplayer/eventsUI.html
+++ b/integrationExamples/videoModule/jwplayer/eventsUI.html
@@ -15,9 +15,7 @@
       var adUnits = [{
         code: 'testUnit',
         mediaTypes: {
-          video: {
-            playerSize: [640, 360]
-          }
+          video: {}
         },
         video: {
           divId: 'player', // required to indicate which player is being used to render this ad unit.
